--- a/home.html
+++ b/home.html
@@ -17,12 +17,12 @@
     <nav>
         <h1></h1>
         <ul>
-            <li><a href="LogIn.html">Home</a></li>
-            <li><a href="LogIn.html">Resturent</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="">Resturent</a></li>
             <li><a href="">About Us</a></li>
             <li>
                 <button class="home-btn" >
-                    <a href="LogIn.html">Login</a>
+                    <a href="LogIn.html">Logout</a>
                 </button>
             </li>
         </ul>
