--- a/LogIn.html
+++ b/LogIn.html
@@ -23,7 +23,7 @@
       </button> 
    </div>
       <button class="btnl" id="btn">
-         <a href="regispage.html">sing in</a>
+         <a href="regispage.html">sign up</a>
       </button>
    </div>
    </form>
