about us page design

--- a/home.html
+++ b/home.html
@@ -18,8 +18,9 @@
         <h1></h1>
         <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="">Resturent</a></li>
-            <li><a href="">About Us</a></li>
+            <li><a href="">Restaurants</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="">Service Area</a></li>
             <li>
                 <button class="home-btn" >
                     <a href="LogIn.html">Logout</a>
