--- a/regispage.html
+++ b/regispage.html
@@ -24,7 +24,7 @@
             </div>
             <div class="details">
                 <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Passowrd" required>
+                <input type="password" placeholder="Password" required>
                 <input type="password" placeholder="Confirm Password" required>
             </div>
            
