--- a/about.html
+++ b/about.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>Cloud Kitchen</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style/home.css">
-    <link href="https://fonts.cdnfonts.com/css/segoe-script" rel="stylesheet">
-    <style>
-        @import url('https://fonts.cdnfonts.com/css/segoe-script');
-</style>
+    <title>Cloud Kitchen</title>
+    <link rel="stylesheet" href="style/about.css">
 </head>
-
 <body>
-    <Div class="dnav">
     <nav>
         <h1></h1>
         <ul>
@@ -28,11 +21,16 @@
             </li>
         </ul>
     </nav>
-</Div>
-    <main>
-        <h1 class="h1-welcome">Welcome</h1>
-        <h2 class="h2-p">A simple platform for <br>   
-           <span>Delicious</span> food</h2>
-    </main>
+    <div class="div-c">
+        
+    <div >
+    <h1>We deliver <br> delicious & <br> healthy food</h1>
+    <p>Order online or book a table . We are always ready <br>
+    to fulfill your demand. We provide your order within <br>
+a vert short time .keep with us to take our delicious food</p>
+<button class="b-btn"><a href="">Book now</a></button>
+            </div>
+        </div>
+
 </body>
 </html>
