area page add and some edit

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="">Restaurants</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="">Service Area</a></li>
+            <li><a href="area.html">Service Area</a></li>
             <li>
                 <button class="home-btn" >
                     <a href="LogIn.html">Logout</a>
