--- a/regispage.html
+++ b/regispage.html
@@ -15,6 +15,7 @@
 
 <body>
     <section class="sign_up">
+        <form action="">
         <div class="container">
             <h1>Cloud Kitchen</h1>
             <p id="create">Create your account. It's free and only takes a minute</p>
@@ -33,6 +34,7 @@
         <div class="signIn">
             <p>Already have an account?<span><a href="LogIn.html">Sign in</a></span></p>
         </div>
+    </form>
     </section>
 </body>
 
