--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <p>Order online or book a table . We are always ready <br>
     to fulfill your demand. We provide your order within <br>
 a vert short time .keep with us to take our delicious food</p>
-<button class="b-btn"><a href="">Book now</a></button>
+<button class="b-btn"><a href="">Order now</a></button>
             </div>
         </div>
 
