--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         <h1></h1>
         <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="">Restaurants</a></li>
+            <li><a href="restaurant.html">Restaurants</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="area.html">Service Area</a></li>
             <li>
